syntax = "proto3";

package fantlab;

option go_package = "app/pb";

message UserSessionResponse {
    uint32 user_id = 1;
    string session_token = 2;
}
